--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,16 @@
 <html>
     <head>
-        <title>Welcome!</title>
+        <link rel="stylesheet" href="../static/styles.css" type="text/css" />
+        <title>No Idea</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>We can build a full webpage here</p>
-        <form>
-            <input type="text" name="nickname" value="Enter your nickname"/>
-            <input type="submit" value="Submit"/>
+        <h1><center>HELLO!</center></h1>
+        <h2>Lets find out if your sentence is even or odd!</h2>
+        <form method="post" action="/result">
+            <input type="text" name="sentence" value="Enter a sentence"/>
+            <input type="submit"/>
         </form>
-    </body>
+        <img src= "https://media2.giphy.com/media/3o6YfTUIfDYjPdnk52/giphy.gif?cid=790b76115d374f0a45665a5877beb7fb&rid=giphy.gif"/>
+        <img src="https://ui-ex.com/images/scale-svg-even-1.png" width=50%/> 
+        </body>
 </html>
